mongodb/mongo-express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ams-mongo-express
  namespace: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ams-mongo-express
  template:
    metadata:
      labels:
        app: ams-mongo-express
    spec:
      containers:
      - name: ams-mongo-express
        image: mongo-express:latest
        ports:
        - containerPort: 8081
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: ams-mongo-express-service
  namespace: mongodb
spec:
  type: ClusterIP
  selector:
    app: ams-mongo-express
  ports:
    - port: 80
      targetPort: 8081
      protocol: TCP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kaifa-mongo-express
  namespace: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kaifa-mongo-express
  template:
    metadata:
      labels:
        app: kaifa-mongo-express
    spec:
      containers:
      - name: kaifa-mongo-express
        image: mongo-express:latest
        ports:
        - containerPort: 8081
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: kaifa-mongo-express-service
  namespace: mongodb
spec:
  type: ClusterIP
  selector:
    app: kaifa-mongo-express
  ports:
    - port: 80
      targetPort: 8081
      protocol: TCP
