mongodb/mongo-express-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ams-mongo-express-ingress
  namespace: mongodb
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: ams-mongo-express.local.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ams-mongo-express-service
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kaifa-mongo-express-ingress
  namespace: mongodb
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: kaifa-mongo-express.local.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kaifa-mongo-express-service
            port:
              number: 80
